# miniTD

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml  cmake.yml
doc/: miniTD1.wasm
docs/: index.html  miniTD1.data  miniTD1.js  miniTD1.wasm
res/: default_schedule.json
res/maps/: cubic_frog.json  cubic_frog_old.json  illogical_wave.json  inverse_saw.json  recursive_rectangle.json  triton_snake.json
res/missions/: cubic_frog_easy.json  cubic_frog_hard.json  illogical_wave_easy.json  inverse_saw_easy.json  recursive_rectangle_easy.json  triton_snake_endless.json
src/: CMakeLists.txt  comp_meta.cpp  comp_meta.hpp  game_scene.cpp  game_scene.hpp  generate_spawn_schedule.cpp  main1.cpp  main_tox.cpp  mission.cpp  mission.hpp  setup_meta.cpp  setup_meta.hpp  setup_services.cpp  setup_services.hpp  setup_services_tox.cpp
src/components/: camera_trauma.hpp  damage.hpp  enemy.hpp  game_constants.hpp  money.hpp  path.cpp  path.hpp  path_progress.hpp  player_lives.hpp  projectile.hpp  spawn_group.hpp  spawn_schedule.cpp  spawn_schedule.hpp  target.hpp  tower_art.hpp  tower_cooldown.hpp  tower_preview.hpp  tower_projectile_spawner.hpp  tower_ray.hpp  wave.hpp
src/entities/: enemy.cpp  enemy.hpp  projectile.cpp  projectile.hpp  spawn_group.cpp  spawn_group.hpp  tower.cpp  tower.hpp
src/opengl/render_tasks/: enemies.cpp  enemies.hpp  map.cpp  map.hpp  projectiles.cpp  projectiles.hpp  towers.cpp  towers.hpp
src/screens/: debug.cpp  debug.hpp  end_screen.cpp  end_screen.hpp  game_mp.cpp  game_mp.hpp  game_sp.cpp  game_sp.hpp  main_menu.cpp  main_menu.hpp
src/services/: game_hud.cpp  game_hud.hpp  lobby_client.cpp  lobby_client.hpp  lobby_host.cpp  lobby_host.hpp  main_menu.cpp  main_menu.hpp  old_lobby.cpp  old_lobby.hpp
src/systems/: camera_trauma_update.cpp  camera_trauma_update.hpp  damage.cpp  damage.hpp  play_sound_on_damage.cpp  play_sound_on_damage.hpp  player_death.cpp  player_death.hpp  progress_enemies.cpp  progress_enemies.hpp  progress_to_position.cpp  progress_to_position.hpp  projectile_bounds_check.cpp  projectile_bounds_check.hpp  projectile_collision.cpp  projectile_collision.hpp  projectile_velocity.cpp  projectile_velocity.hpp  spawn_group_update.cpp  spawn_group_update.hpp  successful_enemies.cpp  successful_enemies.hpp  target_first.cpp  target_first.hpp  target_first_best.cpp  target_first_best.hpp  tower_cooldown.cpp  tower_cooldown.hpp  tower_projectile_spawner.cpp  tower_projectile_spawner.hpp  tower_ray_shooter.cpp  tower_ray_shooter.hpp  wave_logic.cpp  wave_logic.hpp
